--- a/static_devconnect/styles/perfil.css
+++ b/static_devconnect/styles/perfil.css
@@ -1,9 +1,15 @@
+
+
+
+/* header */
+
+
+
 header
 
 {
 
 width: 100%;
-height: 50px;
 background-color: white;
 border: var(--borda);
 border-radius: var(--borda-arrendondada);
@@ -16,14 +22,30 @@ header > div
 
 {
 
+height: 45px;
 display: flex;
-
 width: 100%;
-max-width: 1000px;
-height: 50px;
 border: 2px solid red;
-justify-content: space-around;
-align-self: center;
+
+
+}
+
+
+div > h2
+
+{
+
+width: 90%;
+align-items: start;
+margin-left: 30px;
+
+}
+
+#img-casa
+
+{
+
+margin-top: 3px;
 
 }
 
@@ -31,8 +53,13 @@ div > nav
 
 {
 
+width: 10%;
 display: flex;
+flex-direction: row;
+justify-content: center;
 align-items: center;
+gap: 20px;
+
 
 }
 
@@ -56,6 +83,12 @@ justify-content: center;
 
 }
 
+
+
+/* Main */
+
+
+
 main 
 
 {
@@ -66,6 +99,7 @@ main
     background-color: var(--tons-cinza-claro);
     display: flex;
     justify-content: center;
+    align-self: center;
     flex-wrap: nowrap;
 
 }
@@ -73,10 +107,11 @@ main
 
 main > div {
 
-    width: 320px;
+
+    width: 70%;
     display: flex;
     gap: 15px;
-    background-color: aqua;
+    background-color: white;
 
 }
 
